Quick commit once mybatis is working, after two night work, the problem is mappers.xml should under Resources in IDEA IDE, there's a build class staff here.Soon after will commit a clean one.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,12 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 server.port=8080
+
+mybatis.mapper-locations=classpath*:/mappers/*Mapper.xml
+mybatis.type-aliases-package=com.maritime.models
+
+#dbDriverClassName=org.postgresql.Driver
+#dbUrl=jdbc:postgresql://localhost:5432/postgres?characterEncoding=utf8
+#dbUsername=postgres
+#dbPassword=admin
+#dbMapperxml=com/maritime/com.maritime.dao/resource/*Mapper.xml
