--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,15 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-aop')
 	compile('org.springframework.boot:spring-boot-starter-jdbc')
 	compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.2.0')
+	//compile(group: "org.mybatis", name: "mybatis", version: "${mybatisVersion}")
+	//compile(group: "org.mybatis", name: "mybatis-spring", version: "${mybatisSpringVersion}")
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-configuration-processor')
 	runtime('org.postgresql:postgresql')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+
 
 	testCompile('junit:junit')
 	//providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
