--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,7 @@ spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 server.port=8080
 
-mybatis.mapper-locations=classpath*:/mappers/*Mapper.xml
-mybatis.type-aliases-package=com.maritime.models
-
-#dbDriverClassName=org.postgresql.Driver
-#dbUrl=jdbc:postgresql://localhost:5432/postgres?characterEncoding=utf8
-#dbUsername=postgres
-#dbPassword=admin
-#dbMapperxml=com/maritime/com.maritime.dao/resource/*Mapper.xml
+#Don't need to configure mybatis if use spring-boot-mybatis-starter
+#mybatis.mapper-locations=classpath*:/mappers/*Mapper.xml
+#these mappers should be under resources/com/maritime/dao if IDE is IDEA
+#mybatis.type-aliases-package=com.maritime.models
