--- a/build.gradle
+++ b/build.gradle
@@ -37,16 +37,13 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-aop')
 	compile('org.springframework.boot:spring-boot-starter-jdbc')
 	compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.2.0')
-	//compile(group: "org.mybatis", name: "mybatis", version: "${mybatisVersion}")
-	//compile(group: "org.mybatis", name: "mybatis-spring", version: "${mybatisSpringVersion}")
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-configuration-processor')
 	runtime('org.postgresql:postgresql')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile(group: "org.springframework.boot", name: "spring-boot-starter-test", version: "${springBootVersion}")
+    testCompile(group: "junit", name: "junit", version: "${junitVersion}")
 
-
-	testCompile('junit:junit')
 	//providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 }
