Login back-end complete.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ server.port=8080
 #mybatis.mapper-locations=classpath*:/mappers/*Mapper.xml
 #these mappers should be under resources/com/maritime/dao if IDE is IDEA
 #mybatis.type-aliases-package=com.maritime.models
+
+spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+server.tomcat.uri-encoding=UTF-8
